RavenDB-11431 Fix Review Comments

--- a/src/Raven.Studio/wwwroot/App/views/database/indexes/editIndex.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/indexes/editIndex.html
@@ -397,7 +397,7 @@ docs<span class="token punctuation">.</span>People<span class="token punctuation
                                 <span data-bind="text: effectiveHighlighting"></span> <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a href="#" data-bind="click: highlighting.bind(highlighting, null)"><span>Default</span></a></li>
+                                <li><a href="#" data-bind="click: highlighting.bind(highlighting, null)"><span data-bind="text: defaultHighlighting"></span></a></li>
                                 <li><a href="#" data-bind="click: highlighting.bind(highlighting, true)"><span>Yes</span></a></li>
                                 <li><a href="#" data-bind="click: highlighting.bind(highlighting, false)"><span>No</span></a></li>
                             </ul>
