RavenDB-11463 Include js map + map/reduce syntax in tooltips on index page

--- a/src/Raven.Studio/wwwroot/App/views/database/settings/conflictResolutionScriptSyntax.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/settings/conflictResolutionScriptSyntax.html
@@ -1,32 +1,37 @@
 <div class="modal-dialog modal-lg" role="document" id="conflictResolutionSyntaxDialog">
-    
-    <div>Conflicted documents:</div>
-    
-    <div class="row">
-        <div class="col-md-6">
+    <div class="modal-content">
+        <div class="modal-body">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="icon-cancel"></i></button>
+            <div class="margin-top">Conflicted documents:</div>
+            <div class="row">
+                <div class="col-md-6">
 <pre>
 <span class="token punctuation">{</span>
     <span class="token string">"Name"</span>: <span class="token string">"John"</span>,
     <span class="token string">"MaxRecord"</span>: <span class="token number">43</span>
-<span class="token punctuation">}</span></pre>
-        </div>
-        <div class="col-md-6">
+<span class="token punctuation">}</span>
+</pre>
+                </div>
+                <div class="col-md-6">
 <pre>
 <span class="token punctuation">{</span>
     <span class="token string">"Name"</span>: <span class="token string">"John"</span>,
     <span class="token string">"MaxRecord"</span>: <span class="token number">80</span>
-<span class="token punctuation">}</span></pre>
-        </div>
-    </div>
-    
-    <div>Script:</div>
-    <pre data-bind="html: scriptHtml"></pre>
-    
-    <div>Conflict resolution result:</div>
-    <pre>
+<span class="token punctuation">}</span>
+</pre>
+                </div>
+            </div>
+
+            <div class="margin-top">Script:</div>
+<pre data-bind="html: scriptHtml">
+</pre>
+            <div class="margin-top">Conflict resolution result:</div>
+<pre>
 <span class="token punctuation">{</span>
     <span class="token string">"Name"</span>: <span class="token string">"John"</span>,
     <span class="token string">"MaxRecord"</span>: <span class="token number">80</span>
-<span class="token punctuation">}</span></pre>
-
-</div>    
+<span class="token punctuation">}</span>
+</pre>
+        </div>
+    </div>
+</div>
