--- a/src/Raven.Studio/wwwroot/Content/css/modals.less
+++ b/src/Raven.Studio/wwwroot/Content/css/modals.less
@@ -278,6 +278,18 @@
     }
 }
 
+#mapReduceIndexSyntaxDialog {
+    width: 65%;
+}
+
+#additionalSourceSyntaxDialog {
+    width: 55%;
+}
+
+#transformationScriptSyntaxDialog {
+    width: 30%;
+} 
+
 #index-performance-operation-details {
 
     .operationName {
