--- a/src/Raven.Studio/wwwroot/Content/css/styles.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles.less
@@ -819,6 +819,10 @@ input[type=file] + .form-control {
         margin-bottom: @grid-gutter-width / 4;
     }
 
+    &.margin-bottom-xs {
+        margin-bottom: @grid-gutter-width / 8;
+    }
+
     &.margin-bottom-lg, &.margin-lg {
         margin-bottom: @grid-gutter-width;
     }
