--- a/src/Raven.Studio/wwwroot/App/views/database/indexes/editIndex.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/indexes/editIndex.html
@@ -27,8 +27,9 @@
 
         <div class="row">
             <div class="col-sm-2">
-                <h2 id="map-title">Maps <small><i class="icon-info text-info"></i></small></h2>
-            </div>
+                <h2 id="map-title" class="margin-bottom margin-bottom-xs">Maps</h2>
+                <a href="#" data-bind="click: mapIndexSyntaxHelp"><small>Syntax help</small></a>
+            </div>           
             <div class="col-sm-10">
                 <div data-bind="foreach: editedIndex().maps">
                     <div class="clearfix">
@@ -61,7 +62,8 @@
         </div>
         <div class="row">
             <div class="col-sm-2">
-                <h2 id="reduce-title">Reduce <small><i class="icon-info text-info"></i></small></h2>
+                <h2 id="reduce-title" class="margin-bottom margin-bottom-xs">Reduce</h2>
+                <a href="#" data-bind="click: mapReduceIndexSyntaxHelp"><small>Syntax help</small></a>
             </div>
             <div class="col-sm-10">
                 <div data-bind="if: editedIndex().hasReduce">
@@ -104,7 +106,7 @@
             </div>
         </div>
         
-        <div class="tabs">
+        <div class="tabs margin-top margin-top-lg">
             <ul class="nav nav-tabs" role="tablist" id="tabsId">
                 <li role="presentation" class="active" id="fieldsTab">
                     <a href="#fields" aria-controls="fields" role="tab" data-toggle="tab">
@@ -178,11 +180,11 @@
                         <input type="file" accept=".cs" id="additionalSourceFilePicker" class="hidden" data-bind="event: { change: _.partial(fileSelected, $element) }" tabindex="-1">
                         <div>
                             <label for="additionalSourceFilePicker" class="btn btn-primary">
-                                <i class="icon-upload"></i><span>Upload the source file</span>
+                                <i class="icon-upload"></i><span>Upload Source File</span>
                             </label>
                         </div>
                         <div>
-                            Upload additional source files which can be referenced inside the index definition <small class="info"><i class="icon-info text-info"></i></small>
+                            <a href="#" data-bind="click: additionalSourceSyntaxHelp"><small>Syntax help</small></a> 
                         </div>
                     </div>
                     <div class="flex-horizontal flex-stretch-items margin-top">
@@ -307,33 +309,9 @@
     <div class="indexing-options" data-bind="visible: isSpatial">
         <span class="item active"><i class="icon-check"></i> <i class="icon-cancel"></i><span>Spatial</span></span>
     </div>
-
 </script>
+
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ END AUTO INDEX ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-
-<script type="text/html" id="additional-source-template">
-<div class="padding padding-sm">
-<div>Example additional source:</div>    
-<pre class="margin-bottom">
-<span class="token keyword">namespace</span> My<span class="token punctuation">.</span>Namespace
-<span class="token punctuation">{</span>
-    <span class="token keyword">public</span> <span class="token keyword">static</span> <span class="token keyword">class</span> <span class="token class-name">PeopleUtil</span>
-    <span class="token punctuation">{</span>
-        <span class="token keyword">public</span> <span class="token keyword">static</span> <span class="token keyword">string</span> <span class="token function">CalculatePersonEmail</span><span class="token punctuation">(</span><span class="token keyword">string</span> name<span class="token punctuation">)</span>
-        <span class="token punctuation">{</span>
-            <span class="token keyword">return</span> $<span class="token string">"{name}@example.com"</span><span class="token punctuation">;</span>
-        <span class="token punctuation">}</span>
-    <span class="token punctuation">}</span>
-<span class="token punctuation">}</span>
-</pre>
-    <div>Usage in map statement:</div>
-<pre>
-docs<span class="token punctuation">.</span>People<span class="token punctuation">.</span><span class="token function">Select</span><span class="token punctuation">(</span>person <span class="token operator">=</span><span class="token operator">></span> <span class="token keyword">new</span> <span class="token punctuation">{</span>
-    _ <span class="token operator">=</span> <span class="token keyword">this</span><span class="token punctuation">.</span><span class="token function">CreateField</span><span class="token punctuation">(</span><span class="token string">"Email"</span><span class="token punctuation">,</span> PeopleUtil<span class="token punctuation">.</span><span class="token function">CalculatePersonEmail</span><span class="token punctuation">(</span>person<span class="token punctuation">.</span>Name<span class="token punctuation">)</span><span class="token punctuation">,</span> stored<span class="token punctuation">:</span> <span class="token keyword">true</span><span class="token punctuation">,</span> analyzed<span class="token punctuation">:</span> <span class="token keyword">true</span><span class="token punctuation">)</span>
-<span class="token punctuation">}</span><span class="token punctuation">)</span>    
-</pre>
-</div>
-</script>
 
 <script type="text/html" id="field-template">
     <div class="panel-body">
