--- a/src/Raven.Studio/wwwroot/App/views/database/patch/patchSyntax.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/patch/patchSyntax.html
@@ -1,38 +1,50 @@
 <div class="modal-dialog modal-lg margin-bottom" role="document" id="patchSyntaxDialog">
-
-<div>Filter out an array item:</div>
-<pre class="margin-bottom"><span class="token keyword">from</span><span class="token string"> Orders </span>
+    <div class="modal-content">        
+        <div class="modal-body">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="icon-cancel"></i></button>
+            <div class="margin-top">Filter out an array item:</div>
+<pre class="margin-bottom">
+<span class="token keyword">from</span><span class="token string"> Orders </span>
 <span class="token keyword">update</span><span class="token punctuation"> { </span>
     this.Lines = this.Lines.filter(l => l.Product <span class="token operator">!=</span> <span class="token string">'products/1'</span>);
-<span class="token punctuation">}</span></pre>
-
-<div>Denormalize the company name:</div>
-<pre class="margin-bottom"><span class="token keyword">from</span> <span class="token string">Orders</span> <span class="token keyword">as</span> o
+<span class="token punctuation">}</span>
+</pre>            
+            <div>Denormalize the company name:</div>
+<pre class="margin-bottom">
+<span class="token keyword">from</span> <span class="token string">Orders</span> <span class="token keyword">as</span> o
 <span class="token keyword">load</span> o.Company <span class="token keyword">as</span> c
 <span class="token keyword">update</span><span class="token punctuation"> { </span>
     o.CompanyName = c.Name;
-<span class="token punctuation">}</span></pre>
-
-<div>Use JavaScript to patch:</div>
-    <pre class="margin-bottom"><span class="token keyword">from index</span><span class="token string"> 'Orders/Totals' </span><span class="token keyword">as</span> i
+<span class="token punctuation">}</span>
+</pre>
+            
+            <div>Use JavaScript to patch:</div>
+<pre class="margin-bottom"><span class="token keyword">from index</span><span class="token string"> 'Orders/Totals' </span><span class="token keyword">as</span> i
 <span class="token keyword">where</span> i.Total<span class="token operator"> > </span>10000
 <span class="token keyword">load</span> i.Company <span class="token keyword">as</span> c
 <span class="token keyword">update</span><span class="token punctuation"> { </span>
     i.LowerName = c.Name.toLowerCase();
-<span class="token punctuation">}</span></pre>
-    
-    <div>Working with metadata</div>
-<pre class="margin-bottom"><span class="token keyword">from </span><span class="token string">Orders </span>
+<span class="token punctuation">}</span>
+</pre>                
+                <div>Working with metadata</div>
+<pre class="margin-bottom">
+<span class="token keyword">from </span><span class="token string">Orders </span>
 <span class="token keyword">update</span><span class="token punctuation"> { </span>
     <span class="token keyword">this</span>.DocumentId = id(<span class="token keyword">this</span>);
     <span class="token keyword">this</span>.DocumentCollection = <span class="token keyword">this</span>["@metadata"]["@collection"];
-<span class="token punctuation">}</span></pre>    
-
-    <p>You can use following functions in your patch script:</p>
-    <ul>
-        <li><code>put(documentId, document)</code> - puts document with given name and data</li>
-        <li><code>load(documentIdToLoad)</code> - loads document by ID</li>
-        <li><code>del(documentIdToRemove)</code> - deletes document by ID</li>
-        <li><code>output(message)</code> - allows to output debug info when testing patches</li>
-    </ul>
+<span class="token punctuation">}</span>
+</pre> 
+        </div>
+        <div class="modal-footer">
+           <div class="text-left">
+               <p>You can use following functions in your patch script:</p>
+                <ul>
+                    <li><code>put(documentId, document)</code> - puts document with given name and data</li>
+                    <li><code>load(documentIdToLoad)</code> - loads document by ID</li>
+                    <li><code>del(documentIdToRemove)</code> - deletes document by ID</li>
+                    <li><code>output(message)</code> - allows to output debug info when testing patches</li>
+                </ul>
+           </div>
+        </div>
+    </div>
 </div>
