RavenDB-11463 Javascript -> JavaScript

--- a/src/Raven.Studio/wwwroot/App/views/database/indexes/mapReduceIndexSyntax.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/indexes/mapReduceIndexSyntax.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="col-lg-6">
                     <h3 class="margin-top">
-                        <strong>Javascript </strong>Map-Reduce Example:
+                        <strong>JavaScript </strong>Map-Reduce Example:
                     </h3>
  <pre>
  <span class="text-info">// Map Function:</span>
@@ -70,7 +70,7 @@
         </div>
         <div class="modal-footer text-left">
             <div class="text-info bg-info padding">
-                <i class="icon-warning"></i> Note: The Javascript index is an experimental feature.<br/>
+                <i class="icon-warning"></i> Note: The JavaScript index is an experimental feature.<br/>
                 Set 'Features.Availability' configuration to 'Experimental' in order to use.
             </div>
         </div>
