--- a/src/Raven.Studio/wwwroot/App/views/database/indexes/additionalSourceSyntax.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/indexes/additionalSourceSyntax.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="col-lg-6">
                     <h3 class="margin-top">
-                        <strong>Javascript </strong>Example:
+                        <strong>JavaScript </strong>Example:
                     </h3>
                     <pre data-bind="html: additionalSourceJavascriptHtml">
                     </pre>
@@ -30,7 +30,7 @@
         </div>
         <div class="modal-footer text-left">
             <div class="text-info bg-info padding">
-                <i class="icon-warning"></i> Note: The Javascript index is an experimental feature.<br/>
+                <i class="icon-warning"></i> Note: The JavaScript index is an experimental feature.<br/>
                 Set 'Features.Availability' configuration to 'Experimental' in order to use.
             </div>
         </div>
