--- a/src/Raven.Studio/wwwroot/App/views/database/indexes/mapIndexSyntax.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/indexes/mapIndexSyntax.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="col-md-6">
                     <h3 class="margin-top">
-                        <strong>Javascript </strong>Map Example:
+                        <strong>JavaScript </strong>Map Example:
                     </h3>
 <pre>
 <span class="token keyword">map</span>(<span class="token string">"Companies"</span>, (company) <span class="token operator">=></span> {
@@ -44,7 +44,7 @@
         </div>
         <div class="modal-footer text-left">
             <div class="text-info bg-info padding">
-                <i class="icon-warning"></i> Note: The Javascript index is an experimental feature.<br/>
+                <i class="icon-warning"></i> Note: The JavaScript index is an experimental feature.<br/>
                 Set 'Features.Availability' configuration to 'Experimental' in order to use.
             </div>
         </div>
