RavenDB-11525 error after etl connection test

--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/editRavenEtlTask.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/editRavenEtlTask.html
@@ -102,7 +102,7 @@
                                 <div class="padding bg-success small" data-bind="visible: Success">
                                     <div>Successfully connected to the node</div>
                                 </div>
-                                <div data-bind="visible: !Success">
+                                <div data-bind="if: !Success">
                                     <div class="padding bg-danger small">
                                         <h2>Connection test failed!</h2>
                                         <span data-bind="text: $root.fullErrorDetailsVisible() ? Error : $root.shortErrorText()"></span>
