--- a/src/Raven.Studio/wwwroot/App/views/resources/addNewNodeToDatabaseGroup.html
+++ b/src/Raven.Studio/wwwroot/App/views/resources/addNewNodeToDatabaseGroup.html
@@ -14,43 +14,47 @@
             </div>
         </div>
         <div class="modal-body">
-            <div>
-                <div class="form-group row" data-bind="validationElement: nodeTag">
-                    <div class="col-md-4">
+            <div class="flex-form">
+
+                <div class="form-group" data-bind="validationElement: nodeTag">
+                    <div>
                         <label class="control-label">Node tag</label>
                     </div>
-                    <div class="col-md-8">
-                        <button class="btn btn-default btn-block dropdown-toggle" data-toggle="dropdown">
+                    <div class="flex-grow">
+                        <button class="btn btn-block dropdown-toggle text-left" data-toggle="dropdown">
                             <span data-bind="text: nodeTag() ? 'Node ' + nodeTag() : 'Select cluster node'"></span>
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" data-bind="foreach: nodesCanBeAdded">
                             <li><a href="#" data-bind="text: 'Node ' + $data, click: $root.selectedClusterNode"></a></li>
                         </ul>
+                        <span class="help-block" data-bind="validationMessage: nodeTag"></span>
                     </div>
                 </div>
-                
-                <div class="form-group row">
-                    <div class="col-md-8 col-md-offset-4">
-                        <div class="toggle" data-placement="left" data-toggle="tooltip" title="Mentor node is responsible for replicate data to newly added node">
-                            <input id="toggle3" type="checkbox" data-bind="checked: manualChooseMentor">
-                            <label for="toggle3">Choose preferred mentor node manually</label>
+
+                <div class="form-group">
+                    <label class="control-label">&nbsp;</label>
+                    <div class="toggle" data-placement="left" data-toggle="tooltip" title="Mentor node is responsible for replicate data to newly added node" data-animation="true">
+                        <input id="manualMentorNode" type="checkbox" data-bind="checked: manualChooseMentor">
+                        <label for="manualMentorNode">Choose preferred mentor node manually</label>
+                    </div>
+                </div>
+
+                <div data-bind="validationElement: preferredMentor, collapse: manualChooseMentor">
+                    <div class="form-group">
+                        <div>
+                            <label class="control-label">Preferred Mentor</label>
                         </div>
-                    </div>
-                </div>
-                
-                <div class="form-group row" data-bind="validationElement: preferredMentor, visible: manualChooseMentor">
-                    <div class="col-md-4">
-                        <label class="control-label">Preferred mentor</label>
-                    </div>
-                    <div class="col-md-8">
-                        <button class="btn btn-default btn-block dropdown-toggle" data-toggle="dropdown">
-                            <span data-bind="text: preferredMentor() ? 'Node ' + preferredMentor() : 'Select preferred mentor'"></span>
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" data-bind="foreach: possibleMentors">
-                            <li><a href="#" data-bind="text: 'Node ' + $data, click: $root.selectedMentor"></a></li>
-                        </ul>
+                        <div class="flex-grow">
+                            <button class="btn btn-block dropdown-toggle text-left" data-toggle="dropdown">
+                                <span data-bind="text: preferredMentor() ? 'Node ' + preferredMentor() : 'Select preferred mentor'"></span>
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" data-bind="foreach: $root.possibleMentors">
+                                <li><a href="#" data-bind="text: 'Node ' + $data, click: $parent.preferredMentor.bind($parent.preferredMentor, $data)"></a></li>
+                            </ul>
+                            <span class="help-block" data-bind="validationMessage: preferredMentor"></span>
+                        </div>
                     </div>
                 </div>
             </div>
