--- a/src/Raven.Studio/wwwroot/Content/css/pages/indexes.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/indexes.less
@@ -280,3 +280,8 @@
 .confirmationMessage {
     word-break: break-word;
 }
+
+.list-dropup {
+    bottom:100% !important;
+    top: auto !important;
+}
