--- a/src/Raven.Studio/wwwroot/Content/css/notification-center.less
+++ b/src/Raven.Studio/wwwroot/Content/css/notification-center.less
@@ -107,6 +107,10 @@
         margin-bottom: @notification-margin;
         background-color: @panel-bg;
 
+        .text-progress {
+            font-size: 11px;
+        }
+        
         .close {
             position: absolute;
             top: 0;
